objects/Show__c.object
<CustomObject>
    <fields>
        <fullName>Active_Syndications__c</fullName>
        <defaultValue>ABS(0)</defaultValue>
        <label>Active Syndications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_Syndications__c</fullName>
        <label>All Syndications</label>
        <summaryForeignKey>Syndication__c.Show__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <label>Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Podcast</fullName>
                </value>
                <value>
                    <fullName>Vlog</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Host__c</fullName>
        <label>Host</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shows</relationshipLabel>
        <relationshipName>Shows</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Show</label>
    <nameField>
        <label>Show Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>